--- a/index.tex
+++ b/index.tex
@@ -174,10 +174,17 @@ It is crucible for later revalidation of the presented results to reproduce the 
 
 The paper does not give any explicit indication of the application of concepts and approaches defined by design science. Hence if we understand the  study at hand as the next, refined iteration of the preceding work by Salvaneschi et al. \cite{Salvaneschi:2014:ESP:2635868.2635895}, we could deduce the application of such principles on a higher level.
 
-We think the study applied empirical research methods carefully and in a valid way. Hence the unavailability of mentioned complementary information makes the reproducibility at a later point harder or even impossible if the cannot be retrieved at all.
+The study applied empirical research methods carefully and in a valid way overall. Hence the unavailability of mentioned complementary information makes the reproducibility at a later point hard if not impossible when it cannot be retrieved at all.
 
 \subsection{Application of FAIR Research Principles}
 
+The paper has a unique digital object identifier (\emph{DOI}) assigned and is, given necessary access permissions are granted, available online via the IEEE Xplore Online Library\footnote{\url{https://ieeexplore.ieee.org}}. This platform provides extensive meta information like citations, keywords or other work referencing the paper. By doing so, the research report conforms fully with criteria for \emph{Findability} and \emph{Accessibility}. We can further confirm that in regards of \emph{Interoperability} only domain-specific, accepted vocabularies and language is used. Qualified references to the work of third parties are present.
+
+This research report itself does not state an explicit license for reuse. The examination of available meta information in the IEEE Xplore Online Library finally reveals that the IEEE organization holds full copyrights on the report. Reuse permission can be requested. As already highlighted in the previous section, complementary objects like the experiments code samples or the complete survey questionnaires are not available. Though the report does fundamentally conform with the concepts of \emph{Reusability} by providing rich meta information, preceding points violate the concept of FAIR research in these regards.
+
+To further align the results at hand with FAIR research principles, we suggest to (i) state license information more explicitly and (ii) provide (at least) the code samples and questionnaires from the preliminary survey along with the report. If the software used throughout the experiment and surveys would be available too, the value for the science community could be further increased.
+
+\subsection{RP and OOP}
 
 
 \begin{itemize}
@@ -186,11 +193,6 @@ We think the study applied empirical research methods carefully and in a valid w
 	\item \textbf{Critique: Page 15: External Validity: Short RP training: Hype factor: WOW THATS NEW!}
 \end{itemize}
 
-\begin{itemize}
-	\item \textbf{Critique 3: FAIR:Code samples or any additional artifacts are available. Reproducibility?}
-\end{itemize}
-
-\subsection{RP and OOP}
 
 \begin{itemize}
 	\item \textbf{Critique 4: Page 4 defines grapics and UI as traditional domains for RP; is it representative to use mainly traditional domains to challenge RP with observer? ... like: what about "using the right tool for the right thing"?}
