--- a/index.tex
+++ b/index.tex
@@ -66,7 +66,7 @@ As the paper further compares RP with the observer design pattern \cite{gamma199
 
 However, we will not review the papers application of statistical methods since this is out of scope.
 
-In the following we will introduce and clarify important terms. Section 2 and 3 will examine the mentioned paper more closely and answer \emph{RQ1} and \emph{RQ2.1}. The questions \emph{RQ2.2} through \emph{RQ2.4} will be tackled in section 4 where we discuss earlier findings.
+In the following we will introduce and clarify important terms. Section 2 and 3 will examine the mentioned paper more closely and answer \emph{RQ1} and \emph{RQ2.1}. The questions \emph{RQ2.2} through \emph{2.4} will be tackled in section 4 where we discuss earlier findings.
 
 \subsection{Empirical Software Engineering}
 Software engineering applies engineering principles when working with software artifacts \cite{159342} throughout their life cycle. Although ``\emph{the application of a systematic, disciplined, quantifiable approach to the development (\dots) of software (\dots)}'' \cite{159342} may rightful restrain us methodically, it is agreed upon that the process leading to a software product is of creative nature \cite{8051350}. It is this creative environment that keep the fundamental building blocks of software development, maintenance and operation in a constant flux of change. As tools and methods keep changing \cite{kapferer:2019:empirical}, software engineering organizations need to adapt to new circumstances often. Kapferer \cite{kapferer:2019:empirical} highlights in his introduction to empirical software engineering how the exertion of continuous quality improvement procedures like \emph{Plan/Do/Study/Act} \cite{deming} or an agile project setup like \emph{Scrum} leads to the controlled adoption of such. A reliable benchmark allows an organization to estimate feasibility of a new method or tool in advance as well as measure impact after its implementation.
@@ -166,7 +166,7 @@ Within the section \emph{Threats to Validity}, Salvaneschi et al. an overview of
 
 \subsection{Application of Empirical Research Methods}
 
-The main part of the study was conducted through an experiment. With its fixed-design setup, quantitative data was collected and evaluated. With the survey ran upfront, they collected further quantitative data regarding the programming skill level of their subject population, but also ensured all participants were familiar with the software used in the main study. This precaution by Salvaneschi et al. ensured that the final experiment was not biased by unfamiliarity with the setup.
+The main part of the study was conducted through a controlled experiment. With its fixed-design setup, quantitative data was collected and evaluated. With the survey ran upfront, they collected further quantitative data regarding the programming skill level of their subject population, but also ensured all participants were familiar with the software used in the main study. This precaution by Salvaneschi et al. ensured that the final experiment was not biased by unfamiliarity with the setup.
 
 The experiment was followed by another survey consisting of four quantitative and one open, qualitative question. Again, this survey was carefully structured so the open question could potentially be answered as unbiased as possible as the research group emphasize in their report.
 
@@ -174,7 +174,13 @@ It is crucible for later revalidation of the presented results to reproduce the 
 
 The paper does not give any explicit indication of the application of concepts and approaches defined by design science. Hence if we understand the  study at hand as the next, refined iteration of the preceding work by Salvaneschi et al. \cite{Salvaneschi:2014:ESP:2635868.2635895}, we could deduce the application of such principles on a higher level.
 
-The study applied empirical research methods carefully and in a valid way overall. Hence the unavailability of mentioned complementary information makes the reproducibility at a later point hard if not impossible when it cannot be retrieved at all.
+The study applied empirical research methods carefully and in a valid way overall. Hence the unavailability of mentioned complementary information makes the reproducibility at a later point hard if not impossible in case it cannot be retrieved at all.
+
+\begin{itemize}
+	\item \textbf{Critique 5: Page 8 switchOnce was not understandable for all subjects; Observable code might have been better comprehensible. This contradicts Finding 3, where they say RP code needs a potential lower programming skill level}
+	\item \textbf{Critique: Page 14: Renaming variables to neutral things ... Real situation?}
+	\item \textbf{Critique: Page 15: External Validity: Short RP training: Hype factor: WOW THATS NEW!}
+\end{itemize}
 
 \subsection{Application of FAIR Research Principles}
 
@@ -184,29 +190,48 @@ This research report itself does not state an explicit license for reuse. The ex
 
 To further align the results at hand with FAIR research principles, we suggest to (i) state license information more explicitly and (ii) provide (at least) the code samples and questionnaires from the preliminary survey along with the report. If the software used throughout the experiment and surveys would be available too, the value for the science community could be further increased.
 
-\subsection{RP and OOP}
+\subsection{Reactive vs. Object Oriented Programming}
+
+Before the terms of RP and OOP are introduced, Salvaneschi et al. define the \emph{reactive application}. This type of application distinguishes itself from a more traditional one-off input-to-output processing by producing a continuous, through interaction ever-changing, flow if information. By their very nature, reactive applications require design patterns to model this steady flow of data in a comprehensible way.
+
+\textbf{Reactive Programming} gets a thorough introduction by mentioning its roots in the Haskell programming language and the traction it gained throughout the recent years. The research group hypothesises about readability of reactive code facilitating RP. Further characteristics like the declarative way of describing data flows or baked-in composability inherited from its functional ancestor is noted later in section 2. The group gives an overview of how \emph{REScala} implements the paradigm of RP using \mintinline{Scala}{Var}s, \mintinline{Scala}{Signal}s and combinations of those. Because the subject population has a common understanding of Scala and was taught in RP using REScala, Salvaneschi et al. decided to use this flavor of RP for their experiment.
+
+The paradigm of \textbf{Object Oriented Programming} is less prominently introduced compared to its competitor. For its usage in reactive applications, it is quickly reduced to the observer design pattern. Though the group highlights the decoupling of the observable and its observers as positive, inversion of control or incontrollable side effects in the observers code is noted as negative drawbacks lessen the readability and predictability of resulting source code. Since Scala does not only allow functional-flavored code, OOP code examples are presented in Scala too. We were not able to determine a specific implementation of the observer pattern which was used, therefore we conclude the code examples facilitate a theoretical implementation of the design pattern.
+
+Even though the paper assumes the observer design pattern as common knowledge in the expert audience, it could have been introduced more on a par with RP. Furthermore the comparison between the observer pattern and RP is legit, reducing the OOP paradigm to one sole case is disputable. We would have welcomed a more differentiated approach where i.e. the patterns roots in OOP are noted, but then are not used throughout the report as synonym for the pattern itself.
 
 
-\begin{itemize}
-	\item \textbf{Critique 5: Page 8 switchOnce was not understandable for all subjects; Observable code might have been better comprehensible. This contradicts Finding 3, where they say RP code needs a potential lower programming skill level}
-	\item \textbf{Critique: Page 14: Renaming variables to neutral things ... Real situation?}
-	\item \textbf{Critique: Page 15: External Validity: Short RP training: Hype factor: WOW THATS NEW!}
-\end{itemize}
+
 
 
 \begin{itemize}
 	\item \textbf{Critique 4: Page 4 defines grapics and UI as traditional domains for RP; is it representative to use mainly traditional domains to challenge RP with observer? ... like: what about "using the right tool for the right thing"?}
 	\item \textbf{Critique 1: The paper title might hope for RP topic in general, but it is soon clear that we mostly compare with UI releated stuff}
 	\item \textbf{Critique 2: OOP solutions for reactivity are reduces to the observer pattern. The paper misses the opportunity ti mention other approaches}
+	\item Critique: What does Reactjs in the initial list?
 \end{itemize}
-
 
 \begin{itemize}
 	\item \textbf{Check: Claim Page 12 Observer Pattern does not provide separation of concerns}
 	\item \textbf{Critique: Page 13 and 14: Why suddently an analogy to operating system architecture?}
 \end{itemize}
 
-\section{Discussion}
+\section{RP and Frontend Software Engineering Today}
+
+\subsection{ECMAScript}
+
+\begin{itemize}
+	\item RxJS
+	\item BaconJS
+\end{itemize}
+
+\subsection{Other Languages}
+
+\begin{itemize}
+	\item Elm
+	\item OCaml/Reason
+\end{itemize}
+
 Given the results, I will put RP in context with current trends in software engineering, in particular in its subdiscipline web frontend engineering.
 Ideas: RxJS, BaconJS, Elm, ReactJS \dots tbd.
 
