Scenaro Data Flow

--- a/index.bib
+++ b/index.bib
@@ -13,7 +13,10 @@
 
 @book{gamma1995design,
 	title={Design patterns: elements of reusable object-oriented software},
-	author={Gamma, Erich},
+	author={Erich {Gamma},
+		Richard {Helm},
+		Ralph {Johnson} and
+		John {Vlissides}},
 	year={1995},
 	publisher={Pearson Education India}
 }
