--- a/index.tex
+++ b/index.tex
@@ -66,9 +66,10 @@ As the paper further compares RP with the observer design pattern \cite{gamma199
 
 However, we will not review the papers application of statistical methods since this is out of scope.
 
-In the following we will introduce and clarify important terms. Section 2 and 3 will examine the mentioned paper more closely and answer \emph{RQ1} and \emph{RQ2.1}. The questions \emph{RQ2.2} through \emph{2.4} will be tackled in section 4 where we discuss earlier findings.
+In the following we will introduce and clarify important terms. Section 2 and 3 will examine the mentioned paper more closely and answer \emph{RQ1} and \emph{RQ2.1}. The questions \emph{RQ2.2} through \emph{2.4} will be tackled in section 4 where discuss earlier findings in the context of frontend engineering.
 
 \subsection{Empirical Software Engineering}
+
 Software engineering applies engineering principles when working with software artifacts \cite{159342} throughout their life cycle. Although ``\emph{the application of a systematic, disciplined, quantifiable approach to the development (\dots) of software (\dots)}'' \cite{159342} may rightful restrain us methodically, it is agreed upon that the process leading to a software product is of creative nature \cite{8051350}. It is this creative environment that keep the fundamental building blocks of software development, maintenance and operation in a constant flux of change. As tools and methods keep changing \cite{kapferer:2019:empirical}, software engineering organizations need to adapt to new circumstances often. Kapferer \cite{kapferer:2019:empirical} highlights in his introduction to empirical software engineering how the exertion of continuous quality improvement procedures like \emph{Plan/Do/Study/Act} \cite{deming} or an agile project setup like \emph{Scrum} leads to the controlled adoption of such. A reliable benchmark allows an organization to estimate feasibility of a new method or tool in advance as well as measure impact after its implementation.
 
 Hence software engineering problems lack analytical and scientific formalism, empirical software engineering applies empirical research methods in software engineering to yield a representative benchmark for a problem domain.
@@ -112,7 +113,7 @@ The observer pattern \cite{gamma1995design} deeply rooted in OOP defines an inte
 The \emph{EventTarget interface}\footnote{\url{https://dom.spec.whatwg.org/\#interface-eventtarget}} of the document object model \emph{(DOM)} API exposed to a browsers JavaScript runtime (among others) is an evolution of the observer pattern.
 
 \begin{listing}[H]
-	\mint{JavaScript}{window.addEventListener('click', e => console.log('click', e.target));}
+	\mint{JavaScript}{window.addEventListener("click", e => console.log("click", e.target));}
 	\caption{Add a click handler to the \mintinline{JavaScript}{window} event target}
 	\label{lst:eventtarget}
 \end{listing}
@@ -198,7 +199,7 @@ The paradigm of \textbf{Object Oriented Programming} is less prominently introdu
 
 Even though the paper assumes the observer design pattern as common knowledge in the expert audience, it could have been introduced more on a par with RP. Furthermore the comparison between the observer pattern and RP is legit, reducing the OOP paradigm to one sole case is disputable. We would have welcomed a more differentiated approach where i.e. the patterns roots in OOP are noted, but then are not used throughout the report as synonym for the pattern itself.
 
-\section{The Application of RP}
+\section{Practical Application of RP}
 
 The previously reviewed paper by Salvaneschi et al. explores how RP changes the comprehensibility of code for synthetic and interactive applications as well for graphical animations. Hence all of these problems can ultimately be implemented with RP and the observer pattern likewise, there is no measure given when the alluded tradeoffs like the additional layer of abstraction (RP) or inversion of control (observer) outweigh the gained benefits. We will show that there is no case for making RP nor the observer design pattern the ``only one right'' solution for every situation.
 
@@ -212,7 +213,7 @@ We give two typical scenarios from the area of frontend software engineering in 
 
 This scenario describes a common problem where the information from a remote resource needs to be combined with another one. The situation gets a bit more complex when the result of the first resource is required as input for the second one. Generally spoken, a solution to this problem describes the flow (fetch one resource after the other) and transformation (combination of both results) of data.
 
-We can implement a solution facilitating a basic RP approach using the \mintinline{JavaScript}{Promise}\footnote{\url{https://www.ecma-international.org/ecma-262/6.0/\#sec-promise-objects}} API available in modern JavaScript runtime environments as exemplified in listing \ref{lst:case-for-rp-rp}.
+We can implement a solution facilitating a basic RP approach using the \mintinline{JavaScript}{Promise}\footnote{\url{https://www.ecma-international.org/ecma-262/6.0/\#sec-promise-objects}} API available in modern JavaScript runtime environments as exemplified in listing \ref{lst:data-flow-rp}.
 
 \begin{listing}
 	\begin{minted}{JavaScript}
@@ -224,10 +225,10 @@ We can implement a solution facilitating a basic RP approach using the \mintinli
 			.then(renderUser);
 	\end{minted}
 	\caption{Render user profile using RP with the \mintinline{JavaScript}{Promise} API}
-	\label{lst:case-for-rp-rp}
+	\label{lst:data-flow-rp}
 \end{listing}
 
-Listing \ref{lst:case-for-rp-observer} implements the exact same functionality as \ref{lst:case-for-rp-rp} but leverages an implementation of the observer design pattern after Gamma et al. \cite{gamma1995design}. By solely inspecting the line count of both implementation, we support results of Salvaneschi et al. \cite{7827078} regarding added boilerplate code. The RP solution reflects the mental model of fetching one resource after another clearly, the observer needs to implement code for handling \mintinline{JavaScript}{fetchAvatar}s result (line 12) before \mintinline{JavaScript}{fetchProfile} is even called (line 17) which further goes along with their research results regarding comprehensibility of RP code.
+Listing \ref{lst:data-flow-observer} implements the exact same functionality as \ref{lst:data-flow-rp} but leverages an implementation of the observer design pattern after Gamma et al. \cite{gamma1995design}. By solely inspecting the line count of both implementation, we support results of Salvaneschi et al. \cite{7827078} regarding added boilerplate code. The RP solution reflects the mental model of fetching one resource after another clearly, the observer needs to implement code for handling \mintinline{JavaScript}{fetchAvatar}s result (line 12) before \mintinline{JavaScript}{fetchProfile} is even called (line 17) which further goes along with their research results regarding comprehensibility of RP code.
 
 \begin{listing}[H]
 	\begin{minted}{JavaScript}
@@ -253,30 +254,42 @@ Listing \ref{lst:case-for-rp-observer} implements the exact same functionality a
 		});
 	\end{minted}
 	\caption{Render user profile using a custom observer API}
-	\label{lst:case-for-rp-observer}
+	\label{lst:data-flow-observer}
 \end{listing}
 
+\subsection{Event Handling}
 
+\textbf{TODO Revisit and check if this example is good/deep enough} The second scenario is rather simple in its formulation, though represents the recurring common task of handling user interaction events when building frontend application.
 
+\begin{framed}
+	\noindent\emph{Scenario:} When a user clicks a button, add the current time to the click log list.
+\end{framed}
 
-\subsection{Event Handling: A Case for the Observer Pattern}
+Listing \ref{lst:event-handling-observer} (observer) and \ref{lst:event-handling-rp} (RP) both show a simplistic solution for this problem.
 
+\begin{listing}[H]
+	\begin{minted}{JavaScript}
+		getButton().addEventListener("click", () => logTime(new Date()));
+	\end{minted}
+	\caption{Log time using \mintinline{JavaScript}{EventTarget} interface}
+	\label{lst:event-handling-observer}
+\end{listing}
 
+\begin{listing}[H]
+	\begin{minted}{JavaScript}
+		Bacon.fromEvent(getButton(), "click").onValue(() => logTime(new Date()));
+	\end{minted}
+	\caption{Log time using an \mintinline{JavaScript}{EventStream} from \emph{BaconJS}}
+	\label{lst:event-handling-rp}
+\end{listing}
 
+\subsection{When RP? When Observer?}
 
-
-\subsection{RP and Frontend Engineering}
-
+\subsection{Outlook}
 
 \begin{itemize}
-	\item JavaScript and TypeScript
-	\item RxJS
-	\item BaconJS
-	\item NgRx
-	\item Elm
-	\item OCaml/Reason
+	\item Study to proof thesis when to apply what paradigm
 \end{itemize}
-
 
 \section{Conclusion}
 
