--- a/index.tex
+++ b/index.tex
@@ -294,15 +294,15 @@ So, when should RP used and when should the observer design pattern be applied u
 
 \subsection{Outlook}
 
-\begin{itemize}
-	\item Study to proof thesis when to apply what paradigm
-\end{itemize}
+We highly hypothesized about when the application of RP might be worth or when better stick with a more traditional observer pattern based approach in the previous sub section. A study providing empirical insight in this matter could yield valuable results to support software projects facing the question state in RQ2.2.
+
+Our own experiences using RP for developing frontend applications using \emph{RxJS}\footnote{\url{https://rxjs.dev/}} resonates well with one of the proposed follow up topics by Salvaneschi et al.: ``\emph{Understanding how programmers work is fundamental to provide better tool support, especially IDEs, a research area which is vastly unexplored for RP.}''\cite{7827078} As the complexity of data flows, their transformations and dependencies increase, the need for better tooling does equally. Even though support libraries like \emph{rxjs-spy}\footnote{\url{https://cartant.github.io/rxjs-spy/}} or the inspection capabilities of \emph{BaconJS} do help to some extent while debugging, we agree with Salvaneschi et al. that improvements in this field could boost the adoption and productivity of RP further.
 
 \section{Conclusion}
 \begin{itemize}
 	\item Revisit Paper Review
-	\item Revisit Practial Application of rp
-	\item Revisit Outlook
+	\item Revisit Practical Application of rp
+	\item Revisit Outlook (When to use and debugging tooling)
 	\item Mention FAIR Check List in Appendix
 	\item Closing Words
 \end{itemize}
@@ -322,42 +322,5 @@ We used this check list to ensure this paper and its complementary information c
 \section*{License}
 \ccby\thinspace\thinspace This work is licensed under a \href{https://creativecommons.org/licenses/by/4.0/}{Creative Commons Attribution 4.0 International License}.
 
-
-\newpage
-\section*{Thought and Snippet Storage}
-
-\begin{framed}
-	\noindent\textbf{This section will not be part of the final version}
-\end{framed}
-
-We will derive a few basic requirements to measure the applicability of RP using system architecture principles defined by the \emph{Reactive Manifesto 2.0} \cite{reactivemanifesto} in order to answer \emph{RQ2.2}.
-
-The \emph{Reactive Manifesto 2.0} \cite{reactivemanifesto} is a high-level software architecture charter installing four pillars describing characteristics of modern software systems. Such a system, and all of its components, is required to react \emph{Responsive} by exposing a reaction on internal and external stimuli in timely manner. This behavior must be consistent, no matter the system was able to process a stimuli successfully or not. A system is then called \emph{Resilient} when its components can recover from a failure state, i.e. delegate their functionality to a replicated instance until their full restore. In order to stay responsive, a system must be able to ``scale'' proportionally with the work it has to deal with. An \emph{Elastic} system can reconfigure itself according to the current workload: Shard or replicate components under heavy load and share request among them. But then again downsize the number of component instances when the number of requests drop to save resources. Finally the manifesto requires a reactive system to be \emph{Message Driven}. Asynchronous message passing mechanisms supports previous three principles by establishing clear boundaries ensuring loose coupling between them.
-
-
-\begin{itemize}
-	\item \textbf{Critique 5: Page 8 switchOnce was not understandable for all subjects; Observable code might have been better comprehensible. This contradicts Finding 3, where they say RP code needs a potential lower programming skill level}
-	\item \textbf{Critique: Page 14: Renaming variables to neutral things ... Real situation?}
-	\item \textbf{Critique: Page 15: External Validity: Short RP training: Hype factor: WOW THATS NEW!}
-\end{itemize}
-
-\begin{itemize}
-	\item \textbf{Critique 4: Page 4 defines grapics and UI as traditional domains for RP; is it representative to use mainly traditional domains to challenge RP with observer? ... like: what about "using the right tool for the right thing"?}
-	\item \textbf{Critique 1: The paper title might hope for RP topic in general, but it is soon clear that we mostly compare with UI releated stuff}
-	\item \textbf{Critique 2: OOP solutions for reactivity are reduces to the observer pattern. The paper misses the opportunity ti mention other approaches}
-	\item Critique: What does Reactjs in the initial list?
-\end{itemize}
-
-\begin{itemize}
-	\item \textbf{Check: Claim Page 12 Observer Pattern does not provide separation of concerns}
-	\item \textbf{Critique: Page 13 and 14: Why suddently an analogy to operating system architecture?}
-\end{itemize}
-
-
-\begin{itemize}
-	\item \textbf{Pick Up: Toolsupport Rxjs}
-	\item \textbf{Pick Up: ECMAScript Streams}
-	\item \textbf{Cite page 13 about operator complexity... Own experience: Yes, it is cumbersome}
-\end{itemize}
 
 \end{document}
