--- a/index.tex
+++ b/index.tex
@@ -95,13 +95,22 @@ Hasselbring et al. \cite{2019arXiv190805986H} transfer the general applicable gu
 \subsection{Reactive Programming}
 RP is a declarative programming paradigm. In contrary to imperative programming, declarative code describes \emph{what} should be achieved rather than \emph{how} the process leading to that result looks like. With RP, we describe values, their transformation over time and how they depend on each other \cite{8354906}. A runtime system propagates changed values to their relevant dependencies, execute declared computations and ensures always a consistent state.
 
+The example code in listing \ref{lst:rp-with-baconjs} uses the RP runtime of \emph{BaconJS}\footnote{\url{http://baconjs.github.io/}} to hook up to \mintinline{JavaScript}{keyup} events of a text field. Once the user does not change the fields value for more than 300 Milliseconds (line 4), the current value is transformed to its upper case representation and gets displayed.
+
 \begin{listing}[H]
 	\begin{minted}{JavaScript}
-		// TODO Example RP
+		Bacon
+			.fromEvent(document.getElementById("input"), "keyup")
+			.map(({ target: { value }}) => value)
+			.debounce(300)
+			.map(value => value.toUpperCase())
+			.onValue(value => output.textContent = value);
 	\end{minted}
-	\caption{}
-	\label{lst:basic-rp-with-baconjs}
+	\caption{Display the upper case value of a text field with BaconJS if not changed for 300 Milliseconds}
+	\label{lst:rp-with-baconjs}
 \end{listing}
+
+
 
 \subsection{Observer Design Pattern}
 When dividing a large component into smaller sub components, we usually want these components to be as isolated as necessary so they become more reusable, hence target for loose coupling between them. Still, the new components need a way to interact with each other.
@@ -228,7 +237,7 @@ We can implement a solution facilitating a basic RP approach using the \mintinli
 
 Listing \ref{lst:data-flow-observer} implements the exact same functionality as \ref{lst:data-flow-rp} but leverages an implementation of the observer design pattern after Gamma et al. \cite{gamma1995design}. By solely inspecting the line count of both implementation, we support results of Salvaneschi et al. \cite{7827078} regarding added boilerplate code. The RP solution reflects the mental model of fetching one resource after another clearly, the observer needs to implement code for handling \mintinline{JavaScript}{fetchAvatar}s result (line 12) before \mintinline{JavaScript}{fetchProfile} is even called (line 17) which further goes along with their research results regarding comprehensibility of RP code.
 
-\begin{listing}[H]
+\begin{listing}
 	\begin{minted}{JavaScript}
 		const profileObservable = observable();
 		const avatarObservable = observable();
@@ -263,9 +272,9 @@ Listing \ref{lst:data-flow-observer} implements the exact same functionality as 
 	\noindent\emph{UC2 Event Handling:} When a user clicks a button, add the current time to the click log list.
 \end{framed}
 
-Listing \ref{lst:event-handling-observer} (observer) and \ref{lst:event-handling-rp} (RP) both show a simplistic solution for the above use case. Though both look in essence similar, the RP implementation using \emph{BaconJS}\footnote{\url{http://baconjs.github.io/}} implies a lot of additional work behind the scene: \mintinline{JavaScript}{fromEvent} creates an \mintinline{JavaScript}{EventStream} which is connected to click events of the button. The \mintinline{JavaScript}{EventStream} emits every event, generates a \mintinline{JavaScript}{Date} using the \mintinline{JavaScript}{map} combinator and finally calls \mintinline{JavaScript}{logTime}. Embracing the observer design pattern without any detour, \ref{lst:event-handling-observer} registers an observer using \mintinline{JavaScript}{addEventListener} and calls \mintinline{JavaScript}{logTime} straight away.
+Listing \ref{lst:event-handling-observer} (observer) and \ref{lst:event-handling-rp} (RP) both show a simplistic solution for the above use case. Though both look in essence similar, the RP implementation using \emph{BaconJS} implies a lot of additional work behind the scene: \mintinline{JavaScript}{fromEvent} creates an \mintinline{JavaScript}{EventStream} which is connected to click events of the button. The \mintinline{JavaScript}{EventStream} emits every event, generates a \mintinline{JavaScript}{Date} using the \mintinline{JavaScript}{map} combinator and finally calls \mintinline{JavaScript}{logTime}. Embracing the observer design pattern without any detour, \ref{lst:event-handling-observer} registers an observer using \mintinline{JavaScript}{addEventListener} and calls \mintinline{JavaScript}{logTime} straight away.
 
-\begin{listing}[H]
+\begin{listing}
 	\begin{minted}{JavaScript}
 		getButton().addEventListener("click", () => logTime(new Date()));
 	\end{minted}
@@ -273,7 +282,7 @@ Listing \ref{lst:event-handling-observer} (observer) and \ref{lst:event-handling
 	\label{lst:event-handling-observer}
 \end{listing}
 
-\begin{listing}[H]
+\begin{listing}
 	\begin{minted}{JavaScript}
 		Bacon.fromEvent(getButton(), "click")
 			.map(() => new Date())
